[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:example"

[package.metadata.component.dependencies]

[dependencies]
wit-bindgen = { version = "0.19.1", default-features = false, features = ["realloc"] }

[workspace]